Fix GitHub Pages base path handling

--- a/public/404.html
+++ b/public/404.html
@@ -2,10 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="refresh" content="0; url=/" />
+    <meta http-equiv="refresh" content="0; url=./" />
     <title>Redirecting…</title>
     <script>
-      window.location.replace('/')
+      window.location.replace('./')
     </script>
   </head>
   <body>
